bug: 23552 Make file properties labels not wrap on white-space.
http://bugzilla.zimbra.com/show_bug.cgi?id=23552

Copied from Perforce
 Change: 87777

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -3226,6 +3226,7 @@ overflow-y: hidden;
 
 .ZmFilePropertiesLabel {
 @TreeHeaderText@
+white-space: nowrap;
 }
 
 .ZmSpreadSheetDoc { background-color: #eee; }
